--- a/login.html
+++ b/login.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html>
 
+<body>
+<script>
+    //code vào đây
+    let userName = prompt("Who's there?", '');
+    if (userName == 'Admin') {
+        //code vào đây
+        let pass = prompt('Password?', '');
+        if (pass == 'TheMaster') {
+            alert('Welcome!');
+        } else if (pass == null) {
+            alert('Canceled.');
+        } else {
+            alert('Wrong password');
+        }x
+    } else if (userName == null) {
+        alert('Canceled');
+    } else {
+        alert("I don't know you");
+    }
+</script>
 </body>
+
 </html>
